<resources>
    <string name="app_name">lockit_plus</string>

    <string name="add_record_ib_desc_qq">QQ登录</string>
    <string name="add_record_ib_desc_wechat">微信登陆</string>
    <string name="add_record_ib_desc_tele">手机号登录</string>
    <string name="add_record_ib_desc_weibo">微博登录</string>
    <string name="add_record_ib_desc_email">邮箱登录</string>
    <string name="add_record_ib_desc_alipay">支付宝登录</string>
</resources>